--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Магазин цветов Botanika</title>
+	<link rel="stylesheet" href="css/normalize.css">
+   	<link rel="stylesheet" href="css/style.css">
    	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
@@ -12,23 +16,23 @@
 	<header id="header" class="header">
 		<div class="logo">
 			<a href="index.html">
-    				<img src="путь к изображению" alt= "Botanika">
+    				<img src="img/logo.svg" alt= "Botanika">
 			</a>
 		</div>   
 
-		<nav>
-			 <ul>
+		<nav class = "header-navigation">
+			 <ul class="header-navigation-list>
   			<li class="catalog"> <a href = "#">Катaлог</a> </li>
   			<li class="delivery"> <a href = "#">Доcтавка и оплата</a></li>
   			<li class="feedback"> <a href="#">Отзывы</a></li>
-			<li class = "spoffer"> <a href ="#">Спецпредложения </a> </li>
+			<li class ="spoffer"> <a href ="#">Спецпредложения </a> </li>
   			<li class= "contacts"> <a href = "#"> Контакты </a> </li>
   			<li class ="basket"> <a href ="#">Корзина </a> </li>
 			</ul> 
 		</nav>
  	</header>
-	<section class="offer">
-        	 <div class="headname"> <h1> Авторские букеты <p><i>в Петербурге</i></p></h1></div>
+	<section class="promo">
+        	 <div class="promo-title"> <h1> Авторские букеты <p><i>в Петербурге</i></p></h1></div>
 		<p class="original"> Оригинальные свежие букеты с доставкой по всему городу </p>
  		  <div class="btn"> <a href="#"> <button>Смотреть каталог</button></a></div>
 	  	   <div class="offerimg1"><img src="img/anna-tukhfatullina-food-photographer-stylist-bq6Gd7pQznU-unsplash 1.png" alt="bouqet1" width = "386" height = "484"> </div>
